--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.15",
     "@uploadthing/react": "^6.7.2",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.18",
@@ -31,7 +32,9 @@
     "prisma": "^5.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dom-confetti": "^0.2.0",
     "react-dropzone": "^14.2.3",
+    "react-paystack": "^5.0.0",
     "react-rnd": "^10.4.11",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.4.0",
