feat: update webhook, add email service, modify button pending state

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-email/components": "^0.0.22",
     "@tanstack/react-query": "^5.51.15",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.2",
@@ -37,6 +38,7 @@
     "react-dropzone": "^14.2.3",
     "react-paystack": "^5.0.0",
     "react-rnd": "^10.4.11",
+    "resend": "^3.5.0",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
