--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.3.3",
+    "@clerk/nextjs": "^5.2.14",
     "@headlessui/react": "^2.1.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
     "@prisma/client": "^5.17.0",
